--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.8</version>
+      <version>1.2.16</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -172,6 +172,10 @@
       <artifactId>hbase</artifactId>
       <version>0.91.0-SNAPSHOT</version>
       <exclusions>
+        <exclusion>
+          <groupId>org.apache.avro</groupId>
+          <artifactId>avro</artifactId>
+        </exclusion>
         <exclusion>
           <groupId>commons-lang</groupId>
           <artifactId>commons-lang</artifactId>
