--- a/hush/src/main/webapp/WEB-INF/web.xml
+++ b/hush/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,52 @@
 
 <web-app>
   <display-name>HBase URL Shortener</display-name>
+
+  <servlet>
+    <servlet-name>jsp</servlet-name>
+    <servlet-class>org.apache.jasper.servlet.JspServlet</servlet-class>
+    <load-on-startup>0</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>jsp</servlet-name>
+    <url-pattern>*.jspx</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>jsp</servlet-name>
+    <url-pattern>*.jsp</url-pattern>
+  </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+
+  <!--
+    <security-constraint> <web-resource-collection>
+    <web-resource-name>User Page</web-resource-name>
+    <url-pattern>/user/*</url-pattern> </web-resource-collection>
+    <auth-constraint> <role-name>user</role-name> </auth-constraint>
+    </security-constraint> <login-config>
+    <auth-method>BASIC</auth-method> <realm-name>HBaseRealm</realm-name>
+    </login-config>
+  -->
+
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>User Page</web-resource-name>
+      <url-pattern>/user/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>user</role-name>
+    </auth-constraint>
+  </security-constraint>
+
+  <login-config>
+    <auth-method>BASIC</auth-method>
+    <realm-name>HBaseRealm</realm-name>
+  </login-config>
+
 </web-app>
