--- a/hush/src/main/webapp/WEB-INF/web.xml
+++ b/hush/src/main/webapp/WEB-INF/web.xml
@@ -57,8 +57,13 @@
   </security-constraint>
 
   <login-config>
-    <auth-method>BASIC</auth-method>
+    <auth-method>FORM</auth-method>
     <realm-name>HBaseRealm</realm-name>
+    <form-login-config>
+      <form-login-page>/login.jsp</form-login-page>
+      <form-error-page>/error.jsp</form-error-page>
+    </form-login-config>
+
   </login-config>
 
 </web-app>
