JSP tweaks - Modularized JSPs - merged login and signup page - added more styles

--- a/hush/src/main/webapp/WEB-INF/web.xml
+++ b/hush/src/main/webapp/WEB-INF/web.xml
@@ -60,8 +60,8 @@
     <auth-method>FORM</auth-method>
     <realm-name>HBaseRealm</realm-name>
     <form-login-config>
-      <form-login-page>/login.jsp</form-login-page>
-      <form-error-page>/error.jsp</form-error-page>
+      <form-login-page>/signup.jsp</form-login-page>
+      <form-error-page>/signup.jsp?error=We could not log you in.</form-error-page>
     </form-login-config>
 
   </login-config>
