--- a/hush/src/main/webapp/WEB-INF/web.xml
+++ b/hush/src/main/webapp/WEB-INF/web.xml
@@ -55,13 +55,18 @@
       <role-name>admin</role-name>
     </auth-constraint>
   </security-constraint>
+  
+  <error-page>
+    <error-code>403</error-code>
+    <location>/error.jsp?error=You are not authorized to view that page.</location>
+  </error-page>
 
   <login-config>
     <auth-method>FORM</auth-method>
     <realm-name>HBaseRealm</realm-name>
     <form-login-config>
-      <form-login-page>/signup.jsp</form-login-page>
-      <form-error-page>/signup.jsp?error=We could not log you in.</form-error-page>
+      <form-login-page>/login.jsp</form-login-page>
+      <form-error-page>/error.jsp?error=Login failure.</form-error-page>
     </form-login-config>
 
   </login-config>
