--- a/ch04/pom.xml
+++ b/ch04/pom.xml
@@ -16,4 +16,12 @@
 
   <name>HBase Book Chapter 4</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.5</version>
+    </dependency>
+  </dependencies>
+
 </project>
