disable showDeprecation property in pom.xml

--- a/hush/pom.xml
+++ b/hush/pom.xml
@@ -58,7 +58,7 @@
         <configuration>
           <source>${jdkLevel}</source>
           <target>${jdkLevel}</target>
-          <showDeprecation>true</showDeprecation>
+          <showDeprecation>false</showDeprecation>
           <showWarnings>true</showWarnings>
         </configuration>
       </plugin>
