--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <configuration>
           <source>${jdkLevel}</source>
           <target>${jdkLevel}</target>
-          <showDeprecation>true</showDeprecation>
+          <showDeprecation>false</showDeprecation>
           <showWarnings>true</showWarnings>
         </configuration>
       </plugin>
