Added specific dependency for chapter 3.

--- a/ch03/pom.xml
+++ b/ch03/pom.xml
@@ -16,4 +16,12 @@
 
   <name>HBase Book Chapter 3</name>
 
+  <dependencies>
+    <!-- Needed for ScanCacheBatchExample -->
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
+    </dependency>
+  </dependencies>
 </project>
