--- a/ch07/pom.xml
+++ b/ch07/pom.xml
@@ -37,6 +37,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.larsgeorge</groupId>
+      <artifactId>hbase-book-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.1.1</version>
