--- a/ch09/pom.xml
+++ b/ch09/pom.xml
@@ -16,4 +16,11 @@
 
   <name>HBase Book Chapter 9</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.larsgeorge</groupId>
+      <artifactId>hbase-book-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 </project>
