--- a/ch11/pom.xml
+++ b/ch11/pom.xml
@@ -17,10 +17,14 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.larsgeorge</groupId>
+      <artifactId>hbase-book-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.googlecode.json-simple</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.1</version>
     </dependency>
   </dependencies>
-
 </project>
