--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,17 +10,10 @@
   </parent>
 
   <groupId>com.larsgeorge</groupId>
-  <artifactId>hbase-book-ch03</artifactId>
+  <artifactId>hbase-book-common</artifactId>
   <version>2.0</version>
   <packaging>jar</packaging>
 
-  <name>HBase Book Chapter 3</name>
+  <name>HBase Book Common Code</name>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.larsgeorge</groupId>
-      <artifactId>hbase-book-common</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
 </project>
