--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
   </build>
 
   <modules>
+    <module>common</module>
     <module>ch03</module>
     <module>ch04</module>
     <module>ch05</module>
@@ -1012,6 +1013,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
       <version>1.1.2</version>
+    </dependency>
+    <!-- Test related dependencies -->
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>1.3.9</version>
     </dependency>
   </dependencies>
 </project>
